<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diaz.inaki.practica3_contactos.VerContactoActivity">

    <ImageView
        android:id="@+id/photoVerContacto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/foto_del_contacto"
        android:padding="5dp" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textoNombreVerContacto"
        android:layout_alignBottom="@+id/textoNombreVerContacto"
        android:layout_toEndOf="@+id/photoVerContacto"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/textoNombreVerContacto"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/textview"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/TextView"
        android:layout_above="@+id/checkBoxVerContacto" />

    <Button
        android:id="@+id/botonDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonDetalles"
        android:layout_alignTop="@+id/textoNombreVerContacto"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkBoxVerContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_sms"
        android:layout_above="@+id/textoTelefonoVerContacto"
        android:layout_toEndOf="@+id/photoVerContacto" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/telefono"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textoTelefonoVerContacto"
        android:layout_alignBottom="@+id/textoTelefonoVerContacto"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textoTelefonoVerContacto"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/photoVerContacto"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/TextView2"
        android:text="@string/textview"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textoTelefonoVerContacto"
        android:ems="10"
        android:text="@string/fecha_de_nacimiento"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/fechaNacimientoVerContacto"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/textview"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/TextView3"
        android:layout_alignBottom="@+id/TextView3"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/TextView3" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/mensaje"
        android:textSize="12sp"
        android:layout_below="@+id/fechaNacimientoVerContacto"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/mensajeVerContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fechaNacimientoVerContacto"
        android:layout_marginTop="25dp"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="4"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mensajeVerContacto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/botonGuardar" />
</RelativeLayout>